Replaced magic numbers and string literals Refactored stream pipeline to combine map(...).flatMap(...) toList()