@@ -1,10 +1,8 @@
 package practice;
 
 import java.util.Arrays;
-import java.util.Collection;
 import java.util.List;
 import java.util.NoSuchElementException;
-import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 import model.Candidate;
 import model.Cat;
@@ -35,12 +33,10 @@ public class StreamPractice {
      * But before that subtract 1 from each element on an odd position (having the odd index).
      */
     public Double getOddNumsAverage(List<Integer> numbers) {
-        List<Integer> modified = IntStream.range(0, numbers.size())
+        return IntStream.range(0, numbers.size())
                 .map(i -> (i % 2 == 1) ? numbers.get(i) - 1 : numbers.get(i))
                 .boxed()
-                .toList();
-
-        return modified.stream()
+                .toList().stream()
                 .filter(i -> i % 2 != 0)
                 .mapToInt(i -> i)
                 .average()
@@ -61,7 +57,7 @@ public class StreamPractice {
                 .stream()
                 .filter(l -> l.getSex() == Person.Sex.MAN && l.getAge() >= fromAge
                         && l.getAge() <= toAge)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     /**
@@ -80,7 +76,7 @@ public class StreamPractice {
                 .filter(p -> p.getAge() >= fromAge
                         && ((p.getAge() <= maleToAge && p.getSex() == Person.Sex.MAN)
                         || (p.getAge() <= femaleToAge && p.getSex() == Person.Sex.WOMAN)))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     /**
@@ -92,10 +88,9 @@ public class StreamPractice {
         return peopleList
                 .stream()
                 .filter(p -> p.getSex() == Person.Sex.WOMAN && p.getAge() >= femaleAge)
-                .map(Person::getCats)
-                .flatMap(Collection::stream)
+                .flatMap(p -> p.getCats().stream())
                 .map(Cat::getName)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     /**
@@ -116,6 +111,6 @@ public class StreamPractice {
                 .filter(validator)
                 .map(Candidate::getName)
                 .sorted()
-                .collect(Collectors.toList());
+                .toList();
     }
 }
